# docs/swagger.yaml
@@ -1919,6 +1919,22 @@ paths:
       summary: submit invoice for approval
       tags:
       - Invoices
+  /invoices/status-counts:
+    get:
+      description: Get invoice counts per status.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - SessionCookie: []
+      summary: get invoice counts per status
+      tags:
+      - Invoices
   /items:
     get:
       description: Get catalog items of current user.
